# LoopPilot

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY.md  DEVELOPMENT_PLAN.md  GOVERNANCE.md  README.md  SECURITY.md  ideas.md  pyproject.toml
.github/workflows/: ci.yml
clients/wechat-miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json
config/: README.md  adapters.yaml  loop-pilot.yaml  models.yaml  paper.yaml  policies.yaml  sources.yaml
docs/: README.md  en-core.md
docs/development/: 00-system-definition.md  01-architecture.md  02-runtime-mechanism.md  03-intern-loop.md  04-paper-loop.md  05-daily-news-loop.md  06-agents-skills-tools.md  07-data-and-reports.md  08-security-and-recovery.md  09-versions.md  10-testing-and-acceptance.md  11-daily-operation.md  12-development-work-breakdown.md  13-source-and-crawler-plan.md  14-implementation-manifest.md  15-ideas-traceability.md  16-design-audit.md  17-data-contracts.md  18-state-transition-spec.md  19-adapter-specifications.md  20-skill-specifications.md  21-test-fixtures-and-golden-cases.md  22-error-and-budget-policy.md  23-human-review-protocol.md  24-configuration-spec.md  25-mini-run-path.md  28-agent-development-guide.md  29-model-routing-and-runtime-policy.md  30-adapter-and-model-router-roadmap.md  (+37 more)
paper/: README.md  aa-open-source-standard.md  abstract.md  direction.md  outline.md  paper.md  related-work.md
prompts/: CURSOR_0.3_ADAPTER_MVP_PROMPT.md  CURSOR_0.4C_REVIEW_LAYER_PROMPT.md  CURSOR_0.4D_DAILY_SUMMARY_PROMPT.md  CURSOR_0.4_STABILIZATION_PROMPT.md  CURSOR_0.5_SAFE_AUTONOMY_PROMPT.md  CURSOR_MINI_IMPLEMENTATION_PROMPT.md  CURSOR_V1_MVP_IMPLEMENTATION_PROMPT.md  CURSOR_V2_IMPLEMENTATION_PROMPT.md  CURSOR_V3_IMPLEMENTATION_PROMPT.md
schemas/: README.md  agent-output.json  artifact-manifest.json  gate_result.schema.json  run-record.json
scripts/: README.md  backup_state.py  bootstrap_local.py  build_artifact_review_bundle.py  deploy_wsl.sh  install_scheduler.py  migrate_state.py  run_failure_injection_bench.py  run_regression.py  seed_demo_data.py  verify_0_3_acceptance.py  verify_0_4_acceptance.py  verify_0_4b_acceptance.py  verify_0_4c_acceptance.py  verify_0_4d_acceptance.py  verify_0_5_prep.py  verify_api_bridge_contract.py  verify_open_artifact_readiness.py  verify_wechat_miniprogram_static.py  verify_wsl_deploy_static.py
templates/: README.md  next_actions.md  report.md  review_required.md
tests/: README.md  __init__.py  conftest.py  support.py
var/: .gitkeep
(+361 files in other folders)
