[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-pilot"
version = "0.0.0"
description = "A controlled runtime for loop-engineered personal AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "bosprimigenious"},
]
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "jsonschema>=4.20",
]

[project.scripts]
loop-pilot = "loop_pilot.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
news = []
all = ["loop-pilot[dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--ignore=tests/fixtures"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
